--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,14 +13,15 @@
         android:title="对话" />
 
     <item
+        android:id="@+id/nav_image"
+        android:icon="@drawable/image_icon"
+        app:showAsAction="always"
+        android:title="绘画" />
+
+    <item
         android:id="@+id/nav_tool"
         android:icon="@drawable/user_icon"
         app:showAsAction="always"
         android:title="个人" />
 
-    <item
-        android:id="@+id/nav_image"
-        android:icon="@drawable/image_icon"
-        app:showAsAction="always"
-        android:title="设置" />
 </menu>
